[package]
authors = ["Muhammad Ragib Hasin <ragib.hasin@gmail.com>"]
edition = "2018"
name = "ruetian-data-expander"
version = "0.1.0"
private = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
ruetian-common = { git = "https://github.com/RagibHasin/ruetian-common" }
